--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -287,8 +287,16 @@
 				<button name="suma_filas" type="object" string="+" />
 				<h3>Precio:</h3>
 				<field name='peso_metro' />
-                                <field name='tarifa' />
+                                <field name='aplicar_incremento' />
+				<field name='aplicar_corte' />
                                 <field name='tarifa_id' />
+				<field name='eton_user' />
+				<group>
+				    <field name='emetro_calculado' />
+			        </group>
+				<group>
+				    <field name='eton_calculado' />
+				</group>
 
                             </group>
                         </group>
