--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -274,9 +274,10 @@
 			        <field name='unidades' />
 			        <field name='precio_cliente' invisible="1"/>
 			        <field name='precio_metro' attrs="{'invisible': [('precio_cliente', '=', '4')]}"/>
-			        <field name='kilos' attrs="{'invisible': [('precio_cliente', '=', '1'), ('precio_cliente', '=', '2'),('precio_cliente', '=', '1')]}"/>
-			        <field name='precio_kilo' attrs="{'invisible': [('precio_cliente', '=', '1'), ('precio_cliente', '=', '2'),('precio_cliente', '=', '1')]}"/>
-                            </group>
+			        <field name='kilos' attrs="{'invisible': [('precio_cliente', '=', '1'), ('precio_cliente', '=', '2'),('precio_cliente', '=', '3')]}"/>
+				<field name='precio_kilo' attrs="{'invisible': [('precio_cliente', '=', '1'), ('precio_cliente', '=', '2'),('precio_cliente', '=', '3')]}"/>
+                               <field name='precio_varios' attrs="{'invisible': [('precio_cliente', '=', '1'), ('precio_cliente', '=', '3'),('precio_cliente', '=', '4')]}"/>
+			    </group>
 			    <group>
 				<h3>Unidades por Pallet:</h3>
 			        <field name='alto_pallet_text' />
@@ -289,7 +290,7 @@
 			        <group>
 				    <button name="suma_filas" type="object" string="+" />
 			        </group>
-			       <br/><br/><h3>Precio:</h3>
+			        <h3>Calcular Precio:</h3>
 			        <field name='peso_metro' />
                                 <field name='aplicar_incremento' />
 			        <field name='aplicar_corte' />
