--- a/punt_eltete/views/product_template.xml
+++ b/punt_eltete/views/product_template.xml
@@ -1240,6 +1240,8 @@
                     <field name="texto_1"/>
                     <field name="tinta_2_id"/>
                     <field name="texto_2"/>
+                    <field name="tinta_3_id"/>
+                    <field name="texto_3"/>
                     <field name="proveedor"/>
                 </tree>
             </field>
@@ -1260,7 +1262,10 @@
                             <field name="texto_1"/>
                             <field name="tinta_2_id"/>
                             <field name="texto_2"/>
+                            <field name="tinta_3_id"/>
+                            <field name="texto_3"/>
                             <field name="proveedor"/>
+                            <field name="image"/>
                         </group>
                         
                     </sheet>
