--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -48,13 +48,13 @@
                         
                         <h3 attrs="{'invisible': [('state', '!=', 'BOR')]}">Referencia</h3>
                         <group attrs="{'invisible': [('state', '!=', 'BOR')], 'readonly': [('state','!=','BOR')]}" >
-			    <field name='pie'  attrs="{'invisible': [('is_pieballet', '=', False)]}"/>
+							<field name='pie'  attrs="{'invisible': [('is_pieballet', '=', False)]}"/>
                             <field name='ala_1' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
-			    <field name='ancho' attrs="{'invisible': [('is_perfilu', '=', False),('is_slipsheet', '=', False),('is_solidboard', '=', False),('is_formato', '=', False),('is_bobina', '=', False)]}"/>
+                            <field name='ancho' attrs="{'invisible': ['|',('is_cantonera', '=', True),('is_pieballet', '=', True),]}"/>
                             <field name='ala_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
                             <field name='grosor_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}" />
                             <field name='ala_3' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
-			    <field name='longitud' attrs="{'invisible': [('is_cantonera', '=', False), ('is_perfilu', '=', False),('is_slipsheet', '=', False),('is_solidboard', '=', False),('is_formato', '=', False),('is_pieballet', '=', False)]}"/>
+			    <field name='longitud' attrs="{'invisible': [('is_bobina', '=', True)]}"/>
                             <field name='grosor_1' attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),]}" />
                             <field name='ala_4' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
                             <field name='diametro'  attrs="{'invisible': [('is_bobina', '=', False)]}"/>
@@ -263,59 +263,50 @@
                     
                     <sheet>
                         <group>
-			    <group>
-		                <field name="referencia_cliente_id" invisible="1"/>
-			        <field name="attribute_id" domain="[('referencia_cliente_id','=', referencia_cliente_id)]" context="{'default_referencia_cliente_id': referencia_cliente_id,  }"/>
+                            <group>
+                                <field name="referencia_cliente_id" invisible="1"/>
+                                <field name="attribute_id" domain="[('referencia_cliente_id','=', referencia_cliente_id)]" context="{'default_referencia_cliente_id': referencia_cliente_id,  }"/>
                                 <field name='user_id' />
                                 <field name='date' />
                                 <field name='state_id' />
                                 <field name='country_id' />
-		                <field name='num_pallets' />
-			        <field name='unidades' />
-			        <field name='precio_cliente' invisible="1"/>
-			        <field name='precio_metro' attrs="{'invisible': [('precio_cliente', '=', '4')]}"/>
-			        <field name='kilos' attrs="{'invisible': [('precio_cliente', '=', '1'), ('precio_cliente', '=', '2'),('precio_cliente', '=', '3')]}"/>
-				<field name='precio_kilo' attrs="{'invisible': [('precio_cliente', '=', '1'), ('precio_cliente', '=', '2'),('precio_cliente', '=', '3')]}"/>
-                               <field name='precio_varios' attrs="{'invisible': [('precio_cliente', '=', '1'), ('precio_cliente', '=', '3'),('precio_cliente', '=', '4')]}"/>
-			    </group>
-			    <group>
-
-			        <field name='alto_pallet_text' />
-			        <field name='peso_neto_text' />
-                                <field name='peso_bruto_text' />
-			        <field name='und_pallet_text' />
-		                <group>
-				    <button name="resta_filas" type="object" string="-" />
-			        </group>
-			        <group>
-				    <button name="suma_filas" type="object" string="+" />
-			        </group>
-
-			        <field name='peso_metro' />
-                                <field name='aplicar_incremento' />
-			        <field name='aplicar_corte' />
-                                <field name='tarifa_id' />
-		                <field name='eton_user' />
-			        <group>
-				    <field name='emetro_calculado' />
-			        </group>
-			        <group>
-				    <field name='eton_calculado' />
-			        </group>
-			    </group>
-				
+                                <field name='num_pallets' />
+                                <field name='unidades' />
+                                <field name='precio_cliente' invisible="1"/>
+                                <field name='precio_metro' attrs="{'invisible': [('precio_cliente', '=', '4')]}"/>
+                                <field name='kilos' attrs="{'invisible': [('precio_cliente', '=', '1'), ('precio_cliente', '=', '2'),('precio_cliente', '=', '1')]}"/>
+                                <field name='precio_kilo' attrs="{'invisible': [('precio_cliente', '=', '1'), ('precio_cliente', '=', '2'),('precio_cliente', '=', '1')]}"/>
+                            </group>
                             <group>
-				<field name='num_filas' />
+                                <h3>Unidades por Pallet:</h3>
+                                <field name='alto_pallet_text' />
+                                <field name='peso_neto_text' />
+                                <field name='peso_bruto_text' />
+                                <field name='und_pallet_text' />
+                                <button name="resta_filas" type="object" string="-" />
+                                <button name="suma_filas" type="object" string="+" />
+                                <h3>Precio:</h3>
+                                <field name='peso_metro' />
+                                <field name='tarifa_id' />
+
+                            </group>
+                        </group>
+                        
+                        <br/><br/><h3>CÁLCULOS</h3>
+                        <group>
+                            <group>
+                                <field name='num_filas' />
                                 <field name='name' />
-				<field name='cantidad' />
-				<field name='cantidad_tipo' />
-				<field name='precio' />
-				<field name='precio_tipo' />
+                                <field name='cantidad' />
+                                <field name='cantidad_tipo' />
+                                <field name='precio' />
+                                <field name='precio_tipo' />
                             </group>
                             <group>
                                 <field name='descripcion_html' />
                             </group>
                         </group>
+                        
                     </sheet>
                 </form>
             </field>
