--- a/punt_eltete/reports/eltete_report.xml
+++ b/punt_eltete/reports/eltete_report.xml
@@ -19,6 +19,14 @@
             name="punt_eltete.report_orden_fabricacion" 
         />
         
+		<report 
+            id="rep_sale_order_etiquetas"
+            string="Etiquetas pedido"
+            model="sale.order" 
+            report_type="qweb-pdf"
+            file="punt_eltete.report_etiquetas_pedido" 
+            name="punt_eltete.report_etiquetas_pedido" 
+        />
         
 
     </data>
