--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <record model="ir.ui.view" id="view_sale_referencia_cliente_tree">
             <field name="name">sale.referencia.cliente.tree</field>
@@ -275,8 +275,8 @@
                                 <field name='precio_cliente' invisible="1"/>
                                 <field name='precio_metro' attrs="{'invisible': [('precio_cliente', '=', '4')]}"/>
                                 <field name='kilos' attrs="{'invisible': [('precio_cliente', '!=', '4')]}"/>
-                                <field name='precio_kilos' attrs="{'invisible': [('precio_cliente', '!=', '4')]}"/>
-                                
+                                <field name='precio_kilo' attrs="{'invisible': [('precio_cliente', '!=', '4')]}"/>
+                                <field name='precio_varios' attrs="{'invisible': [('precio_cliente', '!=', '5')]}"/>
 			</group>
                             <group>
                                 <h3>Unidades por Pallet:</h3>
