--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -72,15 +72,17 @@
                 <field name="oferta_cantidad" />
                 <field name="oferta_cantidad_tipo" />
                 <field name="oferta_unidades" />
-		    
+		<h3>Datos Pedido Jose</h3>
 		<field name="codigo_cliente" />
 		<field name="descripcion" />
 		<field name="und_pallet" />
+		<field name="num_pallets" />
 		<field name="cantidad" />
 		<field name="precio" />
 		<field name="importe" />
 		<field name="peso_neto" />
 		<field name="peso_bruto" />
+		<h3>Otros</h3>
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="before">
                 <field name="oferta_id" />
