--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -84,14 +84,18 @@
 		<field name="peso_bruto" />
 		<h3>Otros</h3>
             </xpath>
-            <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="before">
+            <xpath expr="//field[@name='order_line']/tree/field[@name='price_subtotal']" position="before">
                 <field name="oferta_id" />
-                <field name="oferta_precio" />
-                <field name="oferta_precio_tipo" />
-                <field name="oferta_cantidad" />
-                <field name="oferta_cantidad_tipo" />
-                <field name="oferta_unidades" />
-
+		
+		<field name="codigo_cliente" />
+		<field name="descripcion" />
+		<field name="und_pallet" />
+		<field name="num_pallets" />
+		<field name="cantidad" />
+		<field name="precio" />
+		<field name="importe" />
+		<field name="peso_neto" />
+		<field name="peso_bruto" />
 	
             </xpath>
             
