--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -87,6 +87,7 @@
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_subtotal']" position="before">
                 <field name="oferta_id" />
 		
+		<field name="bultos" />
 		<field name="und_user" />
 		<field name="kilos_user" />
 		<field name="codigo_cliente" />
