--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -89,6 +89,7 @@
 		<field name="cantidad" />
 		<field name="precio" />
 		<field name="importe" />
+		<field name="estado" />
 		<field name="peso_neto" />
 		<field name="peso_bruto" />
 	
