--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -17,16 +17,22 @@
         <field name="arch" type="xml">
             <form string="Crear líneas de pedido">
                 <group>
-                    <field name='sale_id' invisible="0"/>
-                    <field name='partner_id' invisible="0"/>
-                    <field name="type_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}" />
-                    <field name="product_id" domain="[('categ_id','=',type_id), ('virtual_available', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" />
-                    <field name="lot_ids" domain="[('product_id','=',product_id), ('product_qty', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" widget="many2many_tags" />
-                    <field name='referencia_cliente_id' domain="[('partner_id', '=', partner_id), ('type_id','=',type_id)]" options="{'no_create': True, 'no_create_edit':True}" />
-                    <field name='attribute_id' domain="[('referencia_cliente_id', '=', referencia_cliente_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
-                    <field name='num_pallets' sum="Pallets"/>
-                    <field name='oferta_id' domain="[('attribute_id', '=', attribute_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
-                </group>
+					<group>
+						<field name='sale_id' invisible="1"/>
+						<field name='partner_id' invisible="1"/>
+						<h3>Producto de stock</h3>
+						<field name="type_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}" />
+						<field name="product_id" domain="[('categ_id','=',type_id), ('virtual_available', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" />
+						<field name="lot_ids" domain="[('product_id','=',product_id), ('product_qty', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" widget="many2many_tags" />
+                    </group>
+					<group>
+						<h3>Producto a fabricar</h3>
+						<field name='referencia_cliente_id' domain="[('partner_id', '=', partner_id),]" options="{'no_create': True, 'no_create_edit':True}" />
+						<field name='attribute_id' domain="[('referencia_cliente_id', '=', referencia_cliente_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
+						<field name='oferta_id' domain="[('attribute_id', '=', attribute_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
+						<field name='num_pallets' sum="Pallets"/>
+					</group>
+				</group>
 
                 <footer>
                     <button name="add_lines_sale_order" type="object"
@@ -38,6 +44,24 @@
         </field>
     </record>
 
+
+
+	<record id="view_sale_order_eltete_tree" model="ir.ui.view">
+        <field name="name">sale.order.eltete.tree</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_tree"/>
+        <field name="arch" type="xml">
+        
+            <xpath expr="//field[@name='name']" position="after">
+				<field name="fecha_entrega"/>
+			</xpath>
+			
+			<xpath expr="//field[@name='state']" position="after">
+				<field name="estado"/>
+			</xpath>
+		</field>
+	</record>
+    
 
 
     <record id="view_sale_order_eltete_form" model="ir.ui.view">
@@ -99,6 +123,7 @@
 			<field name="partner_shipping_id" position="after">
 				<field name="pedido_cliente"/>
 				<field name="fecha_entrega"/>
+				<field name="estado"/>
 			</field>
             
 			<field name="confirmation_date" position="after">
