--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -56,6 +56,14 @@
 				<field name="fecha_entrega"/>
 			</xpath>
 			
+			<xpath expr="//field[@name='partner_id']" position="after">
+				<field name="peso_neto"/>
+			</xpath>
+			
+			<xpath expr="//field[@name='amount_total']" position="after">
+				<field name="amount_untaxed"/>
+			</xpath>
+			
 			<xpath expr="//field[@name='state']" position="after">
 				<field name="estado"/>
 			</xpath>
