--- a/punt_eltete/views/product_template.xml
+++ b/punt_eltete/views/product_template.xml
@@ -16,7 +16,6 @@
                             <field name="referencia_id" readonly="1"/>
                         </group>
                         
-                        
                         <div attrs="{'invisible': [('referencia_id', '!=', False)]}">
                             <br/><br/><h3>Referencia</h3>
                         </div>
@@ -62,19 +61,16 @@
                             <field name='inglete_num' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
                             <field name='fsc_id' options="{'no_create': True, 'no_create_edit':True}"/>
                             <field name='reciclable_id' options="{'no_create': True, 'no_create_edit':True}"/>
-							<field name="cantonera_1"/>
-							<field name="cantonera_2"/>
-							<field name="cantonera_3"/>
-							<field name="cantonera_4"/>
-							<field name="sierra"/>
+			    <field name="cantonera_1"/>
+			    <field name="cantonera_2"/>
+			    <field name="cantonera_3"/>
+			    <field name="cantonera_4"/>
+			    <field name="sierra"/>
                         </group>
                     
                     </page>
                 </xpath>
-            
-                
 
-            
         </field>
     </record>
     
@@ -94,7 +90,7 @@
                 <field name="is_bobina" class="oe_inline"/>
                 <field name="is_pieballet" class="oe_inline"/>
                 <field name="is_varios" class="oe_inline"/>
-                
+                <field name="is_papel" class="oe_inline"/>
             </xpath>
         </field>
     </record>
