--- a/punt_eltete/views/product_template.xml
+++ b/punt_eltete/views/product_template.xml
@@ -90,7 +90,7 @@
                 <field name="is_bobina" class="oe_inline"/>
                 <field name="is_pieballet" class="oe_inline"/>
                 <field name="is_varios" class="oe_inline"/>
-                <field name="is_papel" class="oe_inline"/>
+                <field name="is_mprima_papel" class="oe_inline"/>
             </xpath>
         </field>
     </record>
