--- a/punt_eltete/views/sale_cotizacion.xml
+++ b/punt_eltete/views/sale_cotizacion.xml
@@ -54,6 +54,10 @@
                                 </tree>
                             </field>   
                         </group>
+						
+						<group>
+							<field name="observaciones"/>
+                        </group>
 
                     </sheet>
                 </form>
