--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -87,16 +87,6 @@
 				<field name="peso_max_cliente"/>
 				<field name="comentario_paletizado"/>				
                             </group>
-                            <group>
-                                <h3 attrs="{'invisible': [('state', 'in', ['BOR'])]}">Campos calculados</h3><br/>
-                                <field name="paletizado"/>
-				<field name="ancho_pallet"/>
-				<field name="und_paquete"/>
-				<field name="paquetes_fila"/>
-				<field name="alto_fila"/>
-                                <field name="fila_max"/>
-                                <field name="fila_buena"/>
-                            </group>
                         </group>
 						
                         <br/><br/>
@@ -195,8 +185,8 @@
                             </group>
                             <group>
                                 <field name='codigo_cliente' />
-                                <field name='fsc_id' options="{'no_create': True, 'no_create_edit':True}"/>
-                                <field name='reciclable_id' options="{'no_create': True, 'no_create_edit':True}"/>
+				<field name='fsc_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+				<field name='reciclable_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
                                 <field name='inglete_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
                                 <field name='inglete_num' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
                                 <field name='inglete_texto' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
@@ -245,12 +235,15 @@
                                 <field name="attribute_id" domain="[('referencia_cliente_id','=', referencia_cliente_id)]" context="{'default_referencia_cliente_id': referencia_cliente_id,  }"/>
                                 <field name='user_id' />
                                 <field name='date' />
+				<field name='fecha_enviada' />
                                 <field name='state_id' />
                                 <field name='country_id' />
-                                <field name='num_pallets' />
-                                <field name='unidades' />
-                                <field name='precio_cliente' invisible="1"/>
-                                <field name='precio_metro' attrs="{'invisible': [('precio_cliente', '=', '4')]}"/>
+				<h3>Oferta:</h3>
+				<field name='precio_cliente' invisible="1"/>
+                                <field name='num_pallets' attrs="{'invisible': [('precio_cliente', '=', '5')]}"/>
+				    
+                                <field name='unidades' attrs="{'invisible': [('precio_cliente', '=', '5')]}"/>
+				<field name='precio_metro' attrs="{'invisible': ['|',('precio_cliente', '=', '4'),('precio_cliente', '=', '5'),]}"/>
                                 <field name='kilos' attrs="{'invisible': [('precio_cliente', '!=', '4')]}"/>
                                 <field name='precio_kilo' attrs="{'invisible': [('precio_cliente', '!=', '4')]}"/>
                                 <field name='precio_varios' attrs="{'invisible': [('precio_cliente', '!=', '5')]}"/>
