--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -238,7 +238,7 @@
 				<field name='fecha_enviada' />
                                 <field name='state_id' />
                                 <field name='country_id' />
-				<h3>Oferta:</h3>
+				<br/><h3>Oferta:</h3>
 				<field name='precio_cliente' invisible="1"/>
                                 <field name='num_pallets' attrs="{'invisible': [('precio_cliente', '=', '5')]}"/>
 				    
@@ -262,19 +262,7 @@
 
                             </group>
                         </group>
-                        
-                        <br/><br/><h3>CÁLCULOS</h3>
-                        <group>
-                            <group>
-                                <field name='num_filas' />
-                                <field name='name' />
-                                <field name='cantidad' />
-                                <field name='cantidad_tipo' />
-                                <field name='precio' />
-                                <field name='precio_tipo' />
-                            </group>
-                        </group>
-                        
+ 
                     </sheet>
                 </form>
             </field>
