--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -22,7 +22,7 @@
 						<field name='partner_id' invisible="1"/>
 						<h3>Producto de stock</h3>
 						<field name="type_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}" />
-						<field name="product_id" domain="[('categ_id','=',type_id), ('virtual_available', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" />
+						<field name="product_id" domain="[('virtual_available', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" />
 						<field name="lot_ids" domain="[('product_id','=',product_id), ('product_qty', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" widget="many2many_tags" />
                     </group>
 					<group>
@@ -96,23 +96,34 @@
                 </page>
             </xpath>
             
+            
+            <xpath expr="//field[@name='order_line']/form/group/group/field[@name='product_id']" position="before">
+				<field name="peso_neto" />
+				<field name="ancho_interior" />
+				<field name="ancho_superficie" />
+				<field name="j_gram" />
+				<field name="j_superficie" />
+				<field name="j_superficie_max" />
+				<field name="comentario_paletizado" />
+
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_subtotal']" position="before">
-                <field name="oferta_id" />
-		
-		<field name="bultos" />
-		<field name="und_user" />
-		<field name="kilos_user" />
-		<field name="codigo_cliente" />
-		<field name="descripcion" />
-		<field name="und_pallet" />
-		<field name="num_pallets" />
-		<field name="cantidad" />
-		<field name="precio" />
-		<field name="importe" />
-		<field name="estado" />
-		<field name="peso_neto" />
-		<field name="peso_bruto" />
+                <field name="order_partner_id" invisible="1" />
+				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),]"/>
+				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id)]"/>
+				<field name="bultos" />
+				<field name="und_user" />
+				<field name="kilos_user" />
+				<field name="codigo_cliente" />
+				<field name="descripcion" />
+				<field name="und_pallet" />
+				<field name="num_pallets" />
+				<field name="cantidad" />
+				<field name="precio" />
+				<field name="importe" />
+				<field name="estado" />
+				<field name="peso_neto" />
+				<field name="peso_bruto" />
 	
             </xpath>
             
