--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -21,7 +21,7 @@
 						<field name='sale_id' invisible="1"/>
 						<field name='partner_id' invisible="1"/>
 						<h3>Producto de stock</h3>
-						<field name="type_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}" />
+						<!--<field name="type_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}" />-->
 						<field name="product_id" domain="[('virtual_available', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" />
 						<field name="lot_ids" domain="[('product_id','=',product_id), ('product_qty', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" widget="many2many_tags" />
                     </group>
