--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -96,17 +96,7 @@
                 </page>
             </xpath>
             
-            
-            <xpath expr="//field[@name='order_line']/form/group/group/field[@name='product_id']" position="before">
-				<field name="peso_neto" />
-				<field name="ancho_interior" />
-				<field name="ancho_superficie" />
-				<field name="j_gram" />
-				<field name="j_superficie" />
-				<field name="j_superficie_max" />
-				<field name="comentario_paletizado" />
 
-            </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_subtotal']" position="before">
                 <field name="order_partner_id" invisible="1" />
 				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),]"/>
@@ -135,6 +125,7 @@
 			</field>
             
 			<field name="confirmation_date" position="after">
+				<field name="descuento_cliente"/>
 				<field name="fecha_cliente"/>
 				<field name="fecha_entrega_cliente"/>
                 <field name="peso_neto"/>
