--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -125,6 +125,7 @@
 			</field>
             
 			<field name="confirmation_date" position="after">
+				<field name="editar"/>
 				<field name="descuento_cliente"/>
 				<field name="importe_sin_descuento"/>
 				<field name="importe_con_descuento"/>
