--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -97,24 +97,19 @@
             </xpath>
             
 
-            <xpath expr="//field[@name='order_line']/tree/field[@name='price_subtotal']" position="before">
+            <xpath expr="//field[@name='order_line']/tree/field[@name='qty_delivered']" position="before">
                 <field name="order_partner_id" invisible="1" />
 				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),]"/>
 				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id)]"/>
 				<field name="bultos" />
 				<field name="und_user" />
 				<field name="kilos_user" />
-				<field name="codigo_cliente" />
-				<field name="descripcion" />
 				<field name="und_pallet" />
 				<field name="num_pallets" />
 				<field name="cantidad" />
 				<field name="precio" />
 				<field name="importe" />
-				<field name="estado" />
-				<field name="peso_neto" />
-				<field name="peso_bruto" />
-	
+				<field name="estado" />	
             </xpath>
             
 		
@@ -127,9 +122,6 @@
 			<field name="confirmation_date" position="after">
 				<field name="editar"/>
 				<field name="descuento_porcentaje"/>
-				<field name="importe_sin_descuento"/>
-				<field name="importe_con_descuento"/>
-				<field name="descuento_euros"/>
 				<field name="fecha_cliente"/>
 				<field name="fecha_entrega_cliente"/>
                 <field name="peso_neto"/>
