--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -7,14 +7,17 @@
         <field name="arch" type="xml">
         
                 <xpath expr="//field[@name='ref']" position="after">
-                
-                    
-			<field name="pallet_especial_id"/>
-			<field name="ancho_pallet"/>
-			<field name="und_paquete"/>
-		        <field name="unidades"/>
-		        <field name="fabricado"/>
-                        <field name="sale_order_line_id"/>
+			<field name="cliente_id"/>
+			<field name="sale_order_id"/>
+			<field name="sale_order_line_id"/>
+			<field name="hora_inicio"/>
+			<field name="hora_fin"/>
+			<field name="pallet_sage"/>
+			<field name="maquina"/>
+			<field name="unidades"/>
+			<field name="user_unidades"/>
+			<field name="peso_neto"/>
+			<field name="fabricado"/>                        
                 </xpath>
             
 
