--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -17,7 +17,8 @@
 			<field name="unidades"/>
 			<field name="user_unidades"/>
 			<field name="peso_neto"/>
-			<field name="fabricado"/>                        
+			<field name="fabricado"/>  
+			<field name="fecha_salida"/>
                 </xpath>
             
 
